<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="br.com.leonardomiyagi.apppaciente.changepassword.ChangePasswordContract.Presenter" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.leonardomiyagi.apppaciente.changepassword.ChangePasswordActivity">

        <TextView
            android:id="@+id/change_default_password_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_change_password_default_password_hint"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/old_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_change_password_old_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_change_password_new_hint"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> presenter.onConfirmClicked() }"
            android:text="@string/activity_change_password_confirm" />

    </LinearLayout>
</layout>