<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="br.com.leonardomiyagi.apppaciente.appointment.CreateAppointmentContract.Presenter" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.leonardomiyagi.apppaciente.appointment.CreateAppointmentActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/activity_create_appointment_date"
                android:inputType="none"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_create_appointment_time"
                android:inputType="none"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/green_button_bg"
            android:onClick="@{() -> presenter.onScheduleAppointmentClicked() }"
            android:text="@string/activity_create_appointment_label" />

    </FrameLayout>
</layout>